--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "extend": "^2.0.0",
     "grunt-rsync": "^0.6.2",
     "handy-http": "git://github.com/dimik/node-handy-http.git",
-    "inherit": "^2.2.0",
+    "inherit": "^2.2.2",
+    "readdirp": "^1.3.0",
     "vow": "^0.4.8",
+    "walk": "^2.3.9",
     "xml2js": "^0.4.6"
   },
   "devDependencies": {
