--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "grunt-rsync": "^0.6.2",
     "handy-http": "git://github.com/dimik/node-handy-http.git",
     "inherit": "^2.2.2",
+    "lru-cache": "^2.6.2",
     "readdirp": "^1.3.0",
     "vow": "^0.4.8",
     "walk": "^2.3.9",
