--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bla": "^1.2.0",
     "checksum": "^0.1.1",
+    "commander": "^2.9.0",
     "extend": "^2.0.0",
     "grunt-rsync": "^0.6.2",
     "handy-http": "git://github.com/dimik/node-handy-http.git",
@@ -27,7 +28,6 @@
     "lru-cache": "^2.6.2",
     "readdirp": "^1.3.0",
     "vow": "^0.4.8",
-    "walk": "^2.3.9",
     "xml2js": "^0.4.6"
   },
   "devDependencies": {
