--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "checksum": "^0.1.1",
     "commander": "^2.9.0",
     "extend": "^2.0.0",
-    "grunt-rsync": "^0.6.2",
     "handy-http": "git://github.com/dimik/node-handy-http.git",
     "inherit": "^2.2.2",
     "lru-cache": "^2.6.2",
@@ -32,7 +31,6 @@
   },
   "devDependencies": {
     "chai": "^1.9.1",
-    "grunt": "~0.4.5",
     "jscs": "^1.7.3",
     "jshint": "^2.5.2",
     "mocha": "^1.20.1",
@@ -40,8 +38,9 @@
     "sinon": "^1.10.2",
     "xmlhttprequest": "^1.6.0"
   },
+  "license": "MIT",
   "main": "app",
   "engines": {
-    "node": ">= 0.8.0"
+    "node": ">= 0.12.0"
   }
 }
