--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ya-sync",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Uploads any folder to Yandex Disk",
   "author": {
     "name": "Seyar Chapuh",
@@ -21,10 +21,10 @@
     "bla": "^1.2.0",
     "checksum": "^0.1.1",
     "commander": "^2.9.0",
+    "dirty": "^1.1.0",
     "extend": "^2.0.0",
     "handy-http": "git://github.com/dimik/node-handy-http.git",
     "inherit": "^2.2.2",
-    "lru-cache": "^2.6.2",
     "readdirp": "^1.3.0",
     "vow": "^0.4.8",
     "xml2js": "^0.4.6"
